# firedis

./: .gitignore  README.md  pyproject.toml
firedis/: __init__.py  common.py  core.py  key.py  namespace.py  singlekey.py
